@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-03-09"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090309
-#define RUBY_PATCHLEVEL 146
+#define RUBY_PATCHLEVEL 147
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
